src/test/ui/regions/region-multiple-lifetime-bounds-on-fns-where-clause.nll.stderr
error[E0308]: mismatched types
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:22:56
   |
LL |     let _: fn(&mut &isize, &mut &isize, &mut &isize) = a;
   |                                                        ^ expected concrete lifetime, found bound lifetime parameter
   |
   = note: expected type `for<'r, 's, 't0, 't1, 't2, 't3> fn(&'r mut &'s isize, &'t0 mut &'t1 isize, &'t2 mut &'t3 isize)`
              found type `for<'r, 's, 't0> fn(&'r mut &isize, &'s mut &isize, &'t0 mut &isize) {a::<'_, '_, '_>}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
